--- a/src/app/views/dashboard/components/user-details-card/user-details-card.component.html
+++ b/src/app/views/dashboard/components/user-details-card/user-details-card.component.html
@@ -11,9 +11,10 @@
 
     <img mat-card-image [src]="userDetailsModel.picture.large" alt="">
     <mat-card-content>
-      <p>
-        
-      </p>
+      <!-- <p>
+        <button class="user">user</button>
+      </p> -->
+      <ng-content></ng-content>
     </mat-card-content>
   </mat-card>
 
