--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,13 @@
 :host {
   display: flex;
   flex: 1;
-  flex-direction: column;
+  flex-direction: row;
   width: 100%;
   height: 100%;
+}
+
+.list-container {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
 }
