--- a/src/app/views/dashboard/components/dashboard-container/dashboard-container.component.html
+++ b/src/app/views/dashboard/components/dashboard-container/dashboard-container.component.html
@@ -1,21 +1,10 @@
 <section class="container">
 
-  <section class="list-container">
-    <app-user-details-list (selectedUserEmitter)="selectedUserHandler($event)" [usersListModel]="usersListModel"></app-user-details-list>
-  </section>
-
   <section class="cards-container">
-    <app-user-details-card (cardEventEmitter)="cardEventEmitterHandler($event)" [userDetailsModel]="userDetailsModel"></app-user-details-card>
+    <app-user-details-card (cardEventEmitter)="cardEventEmitterHandler($event)" [userDetailsModel]="userDetailsModel">
+    </app-user-details-card>
   </section>
 
 </section>
+
 <router-outlet></router-outlet>
-
-
-
-
-
-
-<!-- <p>
-  <a [routerLink]="['.','1']">AAA</a>
-</p> -->
