--- a/src/app/views/dashboard/components/dashboard-container/dashboard-container.component.scss
+++ b/src/app/views/dashboard/components/dashboard-container/dashboard-container.component.scss
@@ -1,6 +1,6 @@
 :host {
   display: flex;
-  flex: 1;
+  flex: 3;
   flex-direction: row;
 }
 
@@ -13,12 +13,11 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  border: 1px solid red;
+  border: 1px solid gray;
 }
 
 .cards-container {
   display: flex;
   flex-direction: column;
   flex: 3;
-  border: 1px solid aqua;
 }
