--- a/src/app/views/dashboard/components/user-details-card/user-details-card.component.scss
+++ b/src/app/views/dashboard/components/user-details-card/user-details-card.component.scss
@@ -36,3 +36,16 @@ mat-card-title {
     margin: 0;
   }
 }
+
+::ng-deep button.user {
+  -webkit-clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+  clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+  border: 1px solid lightblue;
+  background: lightblue;
+  display: flex;
+  flex: 1;
+  width: 200px;
+  text-align: center;
+  height: 50px;
+  justify-content: center;
+}
