--- a/src/app/components/user-details-list/user-details-list.component.html
+++ b/src/app/components/user-details-list/user-details-list.component.html
@@ -1,5 +1,5 @@
-<mat-list role="list" *ngFor="let user of usersListModel">
-  <mat-list-item (click)="selectedUser(user)" role="listitem">{{user['name']['first']}} {{user['name']['last']}}</mat-list-item>
+<mat-list role="list" *ngFor="let user of usersListModel ">
+  <mat-list-item (click)="selectedUser(user)" role="listitem">{{user['name']['first'] | uppercase}} {{user['name']['last'] | uppercase}}</mat-list-item>
   <ng-container *ngIf="user.voteCounter > 0">
     <div>{{user.voteCounter}}</div>
   </ng-container>
