--- a/src/app/components/user-details-list/user-details-list.component.scss
+++ b/src/app/components/user-details-list/user-details-list.component.scss
@@ -4,4 +4,9 @@ mat-list {
   width: 100%;
   justify-content: space-between;
   align-items: center;
+  padding-right: 1rem;
+  box-sizing: border-box;
+  &:hover{
+    cursor: pointer;
+  }
 }
